Update and rename README.cpp to README

--- a/Room_booking_system/README
+++ b/Room_booking_system/README
@@ -2,3 +2,9 @@ Room.cpp contains the source code for the System.
 It takes the input from the text files room.txt, lab.txt and Lec.txt.
 Above .txt files contains the specifications such as room name, area , capacity, no. of computers in lab, no. of chairs in lecture hall, etc.
 After the code is run the final status  of the booked and unbooked Lab,Lec or room is outputed to OLab.txt,OLec.txt and ORoom.txt respectively
+commands to run code 
+g++ Room.cpp -oRoom
+./Room
+
+And then do actions by choosing appropriate options from the menu listed in the termnal
+Now check the output files
